Added link to original repo

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Repo mirrored from https://code.google.com/p/hss/
+
 You will of course need an installed Erlang/OTP environment.
 
 To build the system and documentation:
